--- a/css/cover.css
+++ b/css/cover.css
@@ -1,19 +1,36 @@
 /* Style Sheet for cover page
  */
 
-html,
-body {
-	height: 100%;
-	background: url(../images/flight.jpg) no-repeat center fixed;
-	background-size: cover;
+html {
+	position: relative;
+	min-height: 100%;
 }
 
 body {
+	font-family: "Verdana", Geneva, sans-serif;
+	padding-bottom: 30px;
 	padding-top: 50px;
 	text-align: center;
-	font-family: "Verdana", Geneva, sans-serif
+	background: url(../images/flight.jpg) no-repeat center fixed;
+	background-size: cover;
+	min-height: 100%;
 }
 
-h1{
-	
+.text-box{
+	text-shadow: 1px 1px #ffffff;
+	color: #000000;
+	background: rgba(230, 230, 230, 0.8);
+	height: 100%;
+	margin-bottom: 15px;
+}
+
+.footer{
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 30px;
+	background-color: #222222;
+	color: #5C5C5C;
+	font-weight: bolder;
+	text-align: center;
 }
