--- a/css/standard.css
+++ b/css/standard.css
@@ -1,10 +1,37 @@
 /* Style Sheet for standard pages
 */
 
+html{
+	position: relative;
+	min-height: 100%;
+}
+
 body {
-	font-family: "Verdana", Geneva, sans-serif
+	font-family: "Verdana", Geneva, sans-serif;
+	margin-bottom: 30px;
+	padding-top: 30px;
 }
 
 .page-header {
 	text-align:center;
+}
+
+.title{
+	text-transform: uppercase;
+	text-align: center;
+}
+
+.company{
+	text-align: center;
+}
+
+.footer{
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 30px;
+	background-color: #222222;
+	color: #5C5C5C;
+	font-weight: bolder;
+	text-align: center;
 }
