--- a/css/cover.css
+++ b/css/cover.css
@@ -30,7 +30,7 @@ body {
 	width: 100%;
 	height: 30px;
 	background-color: #222222;
-	color: #5C5C5C;
+	color: #9d9d9d;
 	font-weight: bolder;
 	text-align: center;
 }
