--- a/css/standard.css
+++ b/css/standard.css
@@ -18,6 +18,19 @@ body {
 	background-color: rgba(237,237,237,1);
 }
 
+.panel > .panel-heading{
+	background-image: none;
+	background-color: #222222;
+	color: #9d9d9d;
+}
+
+.panel > .panel-body{
+	background-image: none;
+	background-color: rgba(237,237,237,1);
+	text-shadow: 1px 1px #ffffff;
+	color: #000000;
+}
+
 .title{
 	text-transform: uppercase;
 	text-align: center;
@@ -33,7 +46,7 @@ body {
 	width: 100%;
 	height: 30px;
 	background-color: #222222;
-	color: #5C5C5C;
+	color: #9d9d9d;
 	font-weight: bolder;
 	text-align: center;
 }
