--- a/css/carousel.css
+++ b/css/carousel.css
@@ -3,7 +3,6 @@
 
 .carousel{
 	height: 500px;
-	margin-bottom: 50px;
 }
 
 .carousel .item{
@@ -24,4 +23,12 @@
 
 .carousel-indicators .active{
 	background-color: #222222;
+}
+
+.carousel-caption{
+	margin-bottom: 10px;
+}
+
+.featurette-divider{
+	margin: 50px 0;
 }
