--- a/css/cover.css
+++ b/css/cover.css
@@ -19,10 +19,11 @@ body {
 .text-box{
 	background: rgba(250, 250, 250, 0.7);
 	text-shadow: 1px 1px #ffffff;
-	color: #000000;
 	height: 100%;
 	margin-bottom: 15px;
 	margin-top: 20px;
+	padding-left: 40px;
+	padding-right: 40px;
 }
 
 .footer{
